fix footer padding to prettify it on mobile

--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -1,6 +1,6 @@
 .footer {
     width: 100%;
-    padding: 0 70px 44px;
+    padding: 0 44px 44px;
 
     display: grid;
     grid-template-columns: 1fr 100px 1fr;
